docs(openspec): derive Java reflectively instead of text-parsing
Kotlin `internal` compiles to a public JVM getter with a $<module> suffix, so
`errorJavaVersion` is reachable by plain reflection without setAccessible.
Verified by compiling the exact declaration shape and reflecting on it.

Moves the derivation into updateAndroidVersions.gradle.kts alongside the four
Android values it already derives, deleting a workflow step rather than
rewriting one.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Entire-Checkpoint: 01KZGPFFTQ8XTZXMKVMWNQJHK1